Fix some checkboxes being different size on mobile

--- a/styles.css
+++ b/styles.css
@@ -83,9 +83,3 @@ label:hover {
     align-items: center;
     gap: 15px;
 }
-
-.bottom-right {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-}
